force-app/main/default/objects/Campaign_Product_Allocation__c/Campaign_Product_Allocation__c.object-meta.xml
<CustomObject>
    <label>Campaign Product Allocation</label>
    <nameField>
        <displayFormat>CPA-{0000}</displayFormat>
        <label>Campaign Product Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Product Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>