force-app/main/default/objects/Campaign_Product_Allocation__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Item</label>
    <referenceTo>npsp__General_Accounting_Unit__c</referenceTo>
    <relationshipLabel>Campaign Price Allocations</relationshipLabel>
    <relationshipName>Campaign_Item_Allocations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>