force-app/main/default/objects/Campaign_Product_Allocation__c/fields/Item_Price__c.field-meta.xml
<CustomField>
    <fullName>Item_Price__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Item Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>