force-app/main/default/objects/Campaign_Product_Allocation__c/fields/UniqueIdentifier__c.field-meta.xml
<CustomField>
    <fullName>UniqueIdentifier__c</fullName>
    <label>UniqueIdentifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>